--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2007-11-29	Nick Schermer <nick@xfce.org>
+	* mousepad/mousepad-print.c: Use bold attribute for labels, so there
+	  is no html in the strings.
+
+
+2007-11-29	Nick Schermer <nick@xfce.org>
 	* mousepad/mousepad-utils.c: Add functions that extent the default
 	  Gtk word start/end function. Use them in the search functions,
 	  transpose and double click selection.
