* mousepad/mousepad-document.c: Make tab close button a bit smaller.
(Old svn revision: 26407)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2007-11-29	Nick Schermer <nick@xfce.org>
+	* mousepad/mousepad-document.c: Make tab close button a bit smaller.
+
+
+2007-11-29	Nick Schermer <nick@xfce.org>
 	* mousepad/mousepad-window.c: Use a box for packing the window elements.
 	  A table was not really needed, and boxes are a bit faster in calculating
 	  child sizes.
